--- a/Tarea1.ipynb
+++ b/Tarea1.ipynb
@@ -88,7 +88,7 @@
      "source": [
       "[3] Calcula las potencias de 10 con precisi\u00f3n arbitraria.\n",
       "\n",
-      "[4] Calcula $2^2^2^2^2$ con aritm\u00e9tica normal y aritm\u00e9tica con precisi\u00f3n arbitraria.\n",
+      "[4] Calcula $2^{2^{2^{2^{2}}}}$ con aritm\u00e9tica normal y aritm\u00e9tica con precisi\u00f3n arbitraria.\n",
       "\n",
       "[5] Utiliza la funci\u00f3n `string` para convertir el resultado (utiliza `ans`) en una cadena (de caracteres), y luego utiliza la funci\u00f3n `length` para encontrar el n\u00famero de d\u00edgitos."
      ]
