--- a/Tarea1.ipynb
+++ b/Tarea1.ipynb
@@ -377,7 +377,7 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "nombre = \"David\""
+      "nombre = \"Ata\""
      ],
      "language": "python",
      "metadata": {},
@@ -387,7 +387,7 @@
        "output_type": "pyout",
        "prompt_number": 27,
        "text": [
-        "\"David\""
+        "\"Ata\""
        ]
       }
      ],
@@ -470,7 +470,7 @@
        "output_type": "pyout",
        "prompt_number": 29,
        "text": [
-        "\"Hola, David, \u00bfc\u00f3mo est\u00e1s?\""
+        "\"Hola, Ata, \u00bfc\u00f3mo est\u00e1s?\""
        ]
       }
      ],
