--- a/Tarea1.ipynb
+++ b/Tarea1.ipynb
@@ -277,7 +277,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "[1] Verifica que Julia s\u00ed sabe que $i \\times i = -1$.\n",
+      "[1] Verifica que Julia s\u00ed sabe que $i \\times i = -1$.\n  A partir de aquí ya no es tarea.",
       "\n",
       "[2] Adivina c\u00f3mo se llama la funci\u00f3n para calcular el conjugado de un n\u00famero complejo.\n",
       "\n",
