--- a/Notas/Practicas.ipynb
+++ b/Notas/Practicas.ipynb
@@ -18,14 +18,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Estructura del proyecto"
+    "## Estructura del reporte"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hay que entregar el notebook con el código en Julia con la introducción ampliada, incluyendo las **ecuaciones** correspondientes, tu **código** (resaltando los puntos importantes, delicados y/o interesantes; el código se puede incluir como un script `.jl` aparte si prefieres), los **gráficos y animaciones**, y **conclusiones físicas**. También debes incluir las **referencias** de los libros (y/o artículos etc.) que hayas utilizado. "
+    "Hay que entregar el notebook con el código en Julia con la introducción ampliada, incluyendo las **ecuaciones** correspondientes, tu **código** (resaltando los puntos importantes, delicados y/o interesantes; el código se puede incluir como un script `.jl` aparte si prefieres),los **gráficos y animaciones**, y **conclusiones físicas**. También debes incluir las **referencias** de los libros (y/o artículos etc.) que hayas utilizado. "
    ]
   }
  ],
