--- a/Tareas/Tarea 2.ipynb
+++ b/Tareas/Tarea 2.ipynb
@@ -189,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podemos leer esto como \"la lista de $x^2$ *para* ('for') $x$ de 1 hasta 10\", o \"la lista de los cuadrados de los números de 1 a 10$.\n",
+    "Podemos leer esto como \"la lista de $$x^2$$ *para* ('for') $$x$$ de 1 hasta 10\", o \"la lista de los cuadrados de los números de 1 a 10$.\n",
     "\n",
     "[6] Utiliza la función `sum` para calcular la suma de estos cuadrados.\n",
     "\n",
@@ -503,9 +503,9 @@
    "source": [
     "Si puedo hacer matrices, puedo resolver sistemas de ecuaciones. Por ejemplo, el sistema: \n",
     "\n",
-    "$2x+y+z=3, x+2y+5z=4,x-3y+6z=-2$. Este sistema se puede escribir en forma matricial como: \n",
+    "$$2x+y+z=3, x+2y+5z=4,x-3y+6z=-2$$. Este sistema se puede escribir en forma matricial como: \n",
     "\n",
-    "$\\left(\\begin{array}{ccc}\n",
+    "$$\\left(\\begin{array}{ccc}\n",
     "2 & 1 & 1\\\\\n",
     "1 & 2 & 5\\\\\n",
     "1 & -3 & 6\\end{array}\\right)\\left(\\begin{array}{c}\n",
@@ -514,11 +514,11 @@
     "z\\end{array}\\right)=\\left(\\begin{array}{c}\n",
     "3\\\\\n",
     "4\\\\\n",
-    "-2\\end{array}\\right)$\n",
+    "-2\\end{array}\\right)$$\n",
     "\n",
     "o en notacion simplificada como: \n",
     "\n",
-    "$A \\cdot \\vec{x}=\\vec{b}$"
+    "$$A \\cdot \\vec{x}=\\vec{b}$$"
    ]
   },
   {
@@ -575,7 +575,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En este caso la solucion sera: $\\vec{x}=A^{-1} \\cdot \\vec{b}$"
+    "En este caso la solucion sera: $$\\vec{x}=A^{-1} \\cdot \\vec{b}$$"
    ]
   },
   {
@@ -634,7 +634,7 @@
    "source": [
     "[1] Ahora un ejemplo más talachudo. Encuentra la solucion al siguiente sistema de ecuaciones\n",
     "\n",
-    "$\\left(\\begin{array}{ccccc}\n",
+    "$$\\left(\\begin{array}{ccccc}\n",
     "1 & 2 & 3 & 4 & -5\\\\\n",
     "-6 & 7 & 8 & 9 & 0\\\\\n",
     "1 & -2 & 3 & 4 & 5\\\\\n",
@@ -649,7 +649,7 @@
     "2\\\\\n",
     "3\\\\\n",
     "4\\\\\n",
-    "5\\end{array}\\right)$"
+    "5\\end{array}\\right)$$"
    ]
   },
   {
