Update Tarea 3 segunda parte.ipynb

--- a/Tareas/Tarea 3 segunda parte.ipynb
+++ b/Tareas/Tarea 3 segunda parte.ipynb
@@ -83,6 +83,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    
+    " Los ejercicios del 13 al 16, están resueltos en la sección de Notas y finalmente no son parte de la tarea 3. "
     "[13] Implementa una función que toma una adivinanza y produce una mejor aproximación para la raiz cuadrada.\n",
     "\n",
     "[14] Implementa una función recursiva que toma el valor de $y$ y una adivinanza inicial, y calcula la raiz cuadrada. **¡No olvides la condición de terminación!**\n",
