Update Problemas a la frontera.ipynb

--- a/Tareas/Problemas a la frontera.ipynb
+++ b/Tareas/Problemas a la frontera.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[1] Discretiza la ecuación con una malla en el espacio, tal como hicimos para la ecuación de difusión. ¿Cuál ecuación discretizada se satisface en un sitio $i$? ¿Si hay una sola carga puntual, cuáles sitios son especiales?\n",
+    "[1] Discretiza la ecuación con una malla en el espacio. ¿Cuál ecuación discretizada se satisface en un sitio $i$? ¿Si hay una sola carga puntual, cuáles sitios son especiales?\n",
     "\n",
     "[2] Dado que ya no hay evolución en el tiempo, todas las ecuaciones para todos los sitios $i$ **se deben cumplir simultáneamente**. ¿Qué tipo de problema resulta? Escríbele bajo una forma útil. ¿Cuál tipo de método conoces para resolver problemas de este tipo?"
    ]
