Update Problemas a la frontera.ipynb

--- a/Tareas/Problemas a la frontera.ipynb
+++ b/Tareas/Problemas a la frontera.ipynb
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[3] Utiliza lo que hayas desarrollado hasta ahora (metodo de runge Kutta, por ejemplo) y lo que sabes de algebra de matrices para resolver el problema del potencial en la presencia de una carga en una dimensión. ¿Tiene sentido físico el resultado?"
+    "[3] Utiliza lo que hayas desarrollado hasta ahora y lo que sabes de algebra de matrices para resolver el problema del potencial en la presencia de una carga en una dimensión. ¿Tiene sentido físico el resultado?"
    ]
   },
   {
