--- a/Tareas/Tarea 8.ipynb
+++ b/Tareas/Tarea 8.ipynb
@@ -97,7 +97,7 @@
     "\n",
     "En general hay a lo más 2 pares de enteros que satisfacen la ecuacion previa. \n",
     "\n",
-    "Como sólo hay a lo más 2 pares diferentes, podemos reducir la suma $s(x,y)=\\sum_{n=0}^\\infty \\sum_{m=0}^\\infty a_{n,m} sin(\\pi n x)sin(\\pi m y)$ a sólo los valores $(n,m)$ donde esa ecuación se cumple, es decir: $ s(x,y)=asin(πnx)sin(πmy)+bsin(πmx)sin(πny)$. \n",
+    "Como sólo hay a lo más 2 pares diferentes, podemos reducir la suma $s(x,y)=\\sum_{n=0}^\\infty \\sum_{m=0}^\\infty a_{n,m} sin(\\pi n x)sin(\\pi m y)$ a sólo los valores $(n,m)$ donde esa ecuación se cumple, es decir: $ s(x,y)=asin(\pi nx)sin(\pi my)+bsin(\pi mx)sin(\pi ny)$. \n",
     "\n",
     "Así, tenemos 4 parámetros, $a,b,n,m$ con los cuales jugar. $n$ y $m$ de alguna forma definen la frecuencia, por lo que podemos poner uno de ellos en función de la frecuencia. $a$ y $b$ por otra parte están relacionados con las amplitudes en las direcciones $x$ y $y$. En general, si el medio (la placa) es homogenia, podemos asumir que $a=b=A$ donde $A$ es la amplitud de la onda (del temblor). \n",
     "\n",
