--- a/Tareas/Tarea 8.ipynb
+++ b/Tareas/Tarea 8.ipynb
@@ -143,6 +143,7 @@
     "[8] Haz otra función que, dada la una frecuencia, el número de veces que la partícula rebotó, y el tiempo, regrese la fase en la que se encuentra la partícula. Recuerda que cada vez que una onda se refleja se invierte su fase. \n",
     "\n",
     "[9] ¿Cómo podrías usar esto para calcular lo que se pide en los problemas [1] y [2]? \n"
+     "puedes checar tus resultados usando el programa https://www.desmos.com/calculator/rdpbran7og \n"
    ]
   },
   {
