--- a/Tareas/Tarea 9.ipynb
+++ b/Tareas/Tarea 9.ipynb
@@ -50,7 +50,7 @@
     "[6] Haz una función que dados $\\sigma_1$ y $\\sigma_2$ calcule la probabilidad $p$. \n",
     "[7] Haz una función que dado un estado inicial $\\sigma$ y un numero de pasos $i$ y una temperatura $1/\\beta$ arroje el estado final del sistema. \n",
     "[8] Haz una función que calcule la magnetización como función del número de pasos, el estado inicial, la temperatura. La magnetización es de \"alguna forma\" la suma total de los espines. Revisa que tu simulación funcione para $T=0$. \n",
-    "[9] Haz una gráfica de la magnetización después de n pasos
+    "[9] Haz una gráfica de la magnetización después de n pasos \n"
 "
    ]
   },
