--- a/Proyectos/Exposiciones-proyectos.ipynb
+++ b/Proyectos/Exposiciones-proyectos.ipynb
@@ -25,9 +25,8 @@
     "\n",
     "1. Edrick Solís González\n",
     "2. Alejandra Díaz y Cristo Igor\n",
-    "3. Humberto y Diego\n",
-    "4. Daniel Martinez\n",
-    "5. Juan Carlos Obeso\n",
+    "3. Daniel Martinez\n",
+    "4. Juan Carlos Obeso\n",
     "\n",
     "\n",
     "## Martes 6 de Diciembre\n",
@@ -35,6 +34,8 @@
     "1. Rivera Lopez Rodrigo\n",
     "2. Karen Lozano\n",
     "3. Efrain Condés \n",
+    "4. Humberto y Diego\n",
+    "5. Hodek Mealstrom\n",
     "\n",
     "## Jueves 8 de Diciembre\n",
     "\n",
